[-] Drop support for net452 and net461.
[+] Add method to diff collections CollectionUtils.Diff and CollectionUtils.ApplyDiff .
[+] Add method to apply collection sorting with one call CollectionUtils.OrderMultiple .
[+] Make covariant IMetadataDto generic type parameters.
[+] Simplify metadata generation by introducing TotalCountListMetadataDto, OffsetLimitMetadataDto, PagedListMetadataDto.
[*] Remove not needed dependencies.

2.0.1 [2019-03-13]
[*] Fix PagedListFactory.Empty and OffsetLimitListFactory.Empty exception.

2.0.0 [2019-02-27]
[*] Use Count for OffsetLimitList.FromSource .
[+] Add Empty method to pagination factories.
[+] Add shorthand Create method to pagination factories.
[*] Comments update.
[+] Memoize is thread safe now.
[-] Remove SkipMemoizeException.

1.0.0 [2018-11-02]
[*] Fix pagination usage when page size is int.MaxSize .
[+] Add Exponential Backoff Normalized delay retry strategy to flow utils.
[*] Parameter firstFastRetry now adds extra attempt.
[-] Drop netstandard 1.2 support.
[+] SourceLink support.

0.4.8 [2018-07-12]
[+] Add DictionaryUtils.GetValueOrDefault and DictionaryUtils.GetValuesOrDefault for NameValueCollection.
[+] Add "on" and "off" values for bool ParseOrDefault.
[*] Fix DateTime truncation by weeks.
[+] Make ConvertBytesToString and ConvertStringToBytes public in SecurityUtils.

0.4.7 [2018-02-08]
[*] Fix FlowUtils.RetryAsync non async exception behavior for .NET 4.0 .
[+] Add EnglishUtils.PluralizeWithNumber and EnglishUtils.Pluralize .
[+] Add StringUtils.Capitalize .
[*] Instead of SortOrder use System.ComponentModel.ListSortDirection .

0.4.5 [2017-09-16]
[+] Add support .NET Standard 1.6 and .NET Standard 2.0 .

0.4.1 [2017-09-13]
[*] Fix datetime millisecond truncation.
[*] Change EnumUtils.GetDescription behavior when there is not Description attribute.

0.4.0 [2017-08-24]
[*] Improve pagination API. Instead of Wrap methods introduce ToMetadataObject and CastMetadataEnumerable.
[*] XML documentation fixes.