@@ -1,4 +1,4 @@
-﻿// Copyright (c) 2015-2017, Saritasa. All rights reserved.
+﻿// Copyright (c) 2015-2019, Saritasa. All rights reserved.
 // Licensed under the BSD license. See LICENSE file in the project root for full license information.
 
 using System;
@@ -103,105 +103,5 @@ namespace Saritasa.Tools.Common.Tests
             // Assert
             Assert.Equal(31125, sum);
         }
-
-        private const string OverriddenDescriptionName = "Description Override";
-
-        public class TestAttribute : Attribute
-        {
-        }
-
-        public enum TestEnum
-        {
-            [Test]
-            [Description(OverriddenDescriptionName)]
-            A,
-
-            B,
-
-            Simple,
-
-            TargetDBConnection,
-        }
-
-        [Fact]
-        public void Get_enum_value_attribute_should_return_attribute()
-        {
-            // Arrange
-            var val = TestEnum.A;
-
-            // Act
-            var attr = EnumUtils.GetAttribute<TestAttribute>(val);
-
-            // Assert
-            Assert.NotNull(attr);
-            Assert.IsType<TestAttribute>(attr);
-        }
-
-        [Fact]
-        public void Get_enum_value_attribute_should_return_null_for_empty_value()
-        {
-            // Arrange
-            var val = TestEnum.B;
-
-            // Act
-            var attr = EnumUtils.GetAttribute<TestAttribute>(val);
-
-            // Assert
-            Assert.Null(attr);
-        }
-
-        [Fact]
-        public void Get_enum_value_attribute_should_return_null_for_incorrect_type()
-        {
-            // Arrange
-            var val = TestEnum.A;
-
-            // Act
-            var attr = EnumUtils.GetAttribute<ObsoleteAttribute>(val);
-
-            // Assert
-            Assert.Null(attr);
-        }
-
-#if NET40 || NET452 || NET461
-        [Fact]
-        public void Enum_description_should_covert_to_string()
-        {
-            // Arrange
-            var val = TestEnum.Simple;
-
-            // Act
-            var stringRepresentation = EnumUtils.GetDescription(val);
-
-            // Assert
-            Assert.Equal("Simple", stringRepresentation);
-        }
-
-        [Fact]
-        public void Enum_description_should_covert_to_string_with_smart_separation()
-        {
-            // Arrange
-            var val = TestEnum.TargetDBConnection;
-
-            // Act
-            var stringRepresentation = EnumUtils.GetDescription(val);
-
-            // Assert
-            Assert.Equal("Target DB Connection", stringRepresentation);
-        }
-
-        [Fact]
-        public void Enum_description_should_use_description_attribute()
-        {
-            // Arrange
-            var val = TestEnum.A;
-
-            // Act
-            var stringRepresentation = EnumUtils.GetDescription(val);
-
-            // Assert
-            Assert.Equal(stringRepresentation, OverriddenDescriptionName);
-        }
-#endif
     }
 }
